k8s/mqtt-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: mqtt-deployment
spec:
  selector:
    matchLabels:
      app: mqtt
  replicas: 1
  template:
    metadata:
      labels:
        app: mqtt
    spec:
      nodeSelector:
        node-role.kubernetes.io/master: "true"
      containers:
      - name: mqtt
        image: eclipse-mosquitto 
        ports:
        - containerPort: 1883
        volumeMounts:
          - name: config
            mountPath: /mosquitto/config/
      volumes:
      - name: config
        configMap:
          name: mqtt-cfg
