k8s/process-demo-simulate-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: process-demo-simulate-deployment
spec:
  selector:
    matchLabels:
      app: process-demo-simulate
  replicas: 1
  template:
    metadata:
      labels:
        app: process-demo-simulate
    spec:
      nodeSelector:
        node-role.kubernetes.io/master: "true"
      containers:
      - name: process-demo-simulate
        image: tbiernat/process-demo-simulate
