k8s/mqtt-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mqtt-ingress
spec:
  backend:
    serviceName: mqtt
    servicePort: 1883
