k8s/nodered-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nodered-ingress
spec:
  backend:
    serviceName: nodered
    servicePort: 1880
